@@ -2,6 +2,7 @@
 
 	* Uncommented a test for aiff file meta data extractions, marked as incomplete though, currently not working...
 	* Added a configuration check status for the reports module
+	* Fixed DAM compatibility: created vpixels and hpixels fields even for text file meta data
 
 2010-09-27 Ingo Renner  <ingo@typo3.org>
 
